src/test/deca/context/invalid/created/assign/assign_class_boolean.deca
// Description :
//    test  assign entre une classe et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.28) Les types A et boolean sont incompatibles pour l’affectation

class A {}
{
A a = new A();;
boolean b;
b = a;
}